# plinks

./: AGENTS.md  Cargo.toml  LICENSE  README.md  project-links.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: build-arch-package.sh  install-git-hooks.sh  run-linters.sh
src/: cli.rs  clipboard.rs  lib.rs  main.rs
src/tui/: editor.rs  events.rs  mod.rs  view.rs
tests/: cli.rs  tui.rs
