[package]
name = "plinks"
version = "0.1.7"
edition = "2024"
description = "Project-local link manager with shell commands and a ratatui TUI"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
open = "5.3"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
portable-pty = "0.9"
predicates = "3.1"
tempfile = "3.14"
